syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
}

message GetProductRequest {
  string id = 1;
}

message GetProductsRequest {
  repeated string ids = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string category = 5;
  bool inStock = 6;
  string imageUrl = 7;
  string sku = 8;
  int32 stockQuantity = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

message GetProductsResponse {
  repeated ProductResponse products = 1;
}
